# BlackHoleProject

./: .gitignore  CMakeLists.txt  Draw.h  GaussNewton.h  IsohronDerivative.h  SolvingSystem.h  StarObject.h  StarStateInterpolator.h  TmpStarObject.h  main.cpp
Data/: graph.plot
MultMatrix/: matrix.cpp  matrix.hpp  types.hpp
