cmake_minimum_required(VERSION 3.19)
project(firstVersion)
#set(CMAKE_CXX_FLAGS "-O3")
set(CMAKE_CXX_STANDARD 20)
find_package(SFML 2.5 COMPONENTS graphics audio REQUIRED)
link_directories(GL)
add_executable(firstVersion main.cpp MultMatrix/matrix.cpp)
target_link_libraries(firstVersion  PRIVATE sfml-graphics)
